fix(ListItem): Removes flex which was causing collapsed whitespace between text and elements

--- a/src/components/list/List.css
+++ b/src/components/list/List.css
@@ -6,7 +6,7 @@
   list-style: none;
 
   & .ax-list__item {
-    display: inline-flex;
+    display: inline-block;
     margin: 0 calc(var(--spacing-grid-size) * 2) 0 0;
     padding: 0 calc(var(--spacing-grid-size) * 2) 0 0;
     border-right: var(--component-border-width) solid var(--color-context-border);
